jenis bisnis cuma retail dan jasa
